--- a/Editor/View/TextEditor.xaml
+++ b/Editor/View/TextEditor.xaml
@@ -32,15 +32,14 @@
                         Height="*" />
                 </Grid.RowDefinitions>
                 <Border
-                    Grid.Row="1">
-                    <Border
-                        BorderThickness="4,0,4,4"
-                        BorderBrush="{TemplateBinding BorderBrush}">
-                        <ContentPresenter
-                            ContentSource="SelectedContent" />
-                    </Border>
+                    Grid.Row="1"
+                    BorderThickness="4"
+                    BorderBrush="{TemplateBinding BorderBrush}">
+                    <ContentPresenter
+                        ContentSource="SelectedContent" />
                 </Border>
                 <ScrollViewer
+                    Margin="0,0,0,-7"
                     HorizontalScrollBarVisibility="Auto">
                     <DockPanel
                         IsItemsHost="True"
@@ -57,6 +56,7 @@
                 <TextBlock
                     Margin="5,0"
                     Text="{Binding Header}"
+                    ToolTip="{Binding Path}"
                     DockPanel.Dock="Left"
                     TextAlignment="Center"
                     VerticalAlignment="Center">
@@ -87,7 +87,7 @@
                 WordWrap="True"
                 FontSize="14"
                 FontFamily="Cascadia Mono Regular"
-                Foreground="#E5E9F0"
+                Foreground="{DynamicResource {x:Static adonisUi:Brushes.ForegroundBrush}}"
                 Background="{DynamicResource {x:Static adonisUi:Brushes.Layer4BackgroundBrush}}"
                 Document="{Binding EditorBody}" />
         </DataTemplate>
@@ -96,9 +96,9 @@
     <TabControl
         x:Name="fixedTab"
         Template="{DynamicResource TabControlTemplate1}"
-        BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
         ItemTemplate="{Binding Source={StaticResource headerTemplate}}"
         ContentTemplate="{Binding Source={StaticResource contentTemplate}}"
+        BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
         SelectedIndex="{Binding SelectedTab}">
         <TabControl.ItemsSource>
             <CompositeCollection>
