--- a/Comparator/View/SelectLabelsDialog.xaml
+++ b/Comparator/View/SelectLabelsDialog.xaml
@@ -4,128 +4,169 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="clr-namespace:Comparator.View"
-    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
+    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     mc:Ignorable="d"
     Title="Seleccionar etiquetas"
     SizeToContent="WidthAndHeight"
     WindowStartupLocation="CenterScreen">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition
-                Height="Auto" />
-            <RowDefinition
-                Height="1" />
-            <RowDefinition
-                Height="*" />
-            <RowDefinition
-                Height="1" />
-            <RowDefinition
-                Height="*" />
-            <RowDefinition
-                Height="1" />
-            <RowDefinition
-                Height="Auto" />
-        </Grid.RowDefinitions>
+    <GroupBox>
+        <Grid
+            Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition
+                    Height="Auto" />
+                <RowDefinition
+                    Height="1" />
+                <RowDefinition
+                    Height="Auto" />
+                <RowDefinition
+                    Height="1" />
+                <RowDefinition
+                    Height="Auto" />
+                <RowDefinition
+                    Height="1" />
+                <RowDefinition
+                    Height="Auto" />
+            </Grid.RowDefinitions>
 
-        <Label
-            Margin="10,5"
-            FontWeight="DemiBold"
-            FontSize="20"
-            Content="Etiquetas a comparar" />
+            <StackPanel
+                VerticalAlignment="Center"
+                HorizontalAlignment="Left">
+                <DockPanel
+                    LastChildFill="False"
+                    Margin="5">
+                    <TextBlock
+                        FontSize="16"
+                        FontWeight="DemiBold"
+                        VerticalAlignment="Center"
+                        Text="Etiqueta 1:" />
+                    <ComboBox
+                        x:Name="leftLabel"
+                        DisplayMemberPath="Name"
+                        SelectedIndex="0"
+                        FontSize="16"
+                        Margin="15,0" />
+                </DockPanel>
+                <DockPanel
+                    Width="Auto"
+                    LastChildFill="False"
+                    Margin="5">
+                    <TextBlock
+                        FontSize="16"
+                        FontWeight="DemiBold"
+                        VerticalAlignment="Center"
+                        Text="Versión:" />
+                    <ComboBox
+                        x:Name="leftGitVer"
+                        SelectionChanged="LeftFetchFiles"
+                        DisplayMemberPath="Tag"
+                        FontSize="16"
+                        Margin="33, 0" />
+                </DockPanel>
+            </StackPanel>
 
-        <Border
-            Grid.Row="1"
-            Background="Black" />
+            <Border
+                Grid.Row="1"
+                Background="Transparent"
+                BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer2BorderBrush}}"
+                BorderThickness="1" />
 
-        <StackPanel
-            Margin="15,0"
-            VerticalAlignment="Center"
-            HorizontalAlignment="Left"
-            Grid.Row="2">
+            <StackPanel
+                VerticalAlignment="Center"
+                Grid.Row="2">
+                <DockPanel
+                    LastChildFill="False"
+                    Margin="5">
+                    <TextBlock
+                        FontSize="16"
+                        FontWeight="DemiBold"
+                        VerticalAlignment="Center"
+                        Text="Etiqueta 2:" />
+                    <ComboBox
+                        x:Name="rightLabel"
+                        DisplayMemberPath="Name"
+                        SelectedIndex="1"
+                        FontSize="16"
+                        Margin="15,0" />
+                </DockPanel>
+                <DockPanel
+                    LastChildFill="False"
+                    Margin="5">
+                    <TextBlock
+                        FontSize="16"
+                        FontWeight="DemiBold"
+                        VerticalAlignment="Center"
+                        Text="Versión:" />
+                    <ComboBox
+                        x:Name="rightGitVer"
+                        SelectionChanged="RightFetchFiles"
+                        DisplayMemberPath="Tag"
+                        FontSize="16"
+                        Margin="33,0" />
+                </DockPanel>
+            </StackPanel>
+
+            <Border
+                Grid.Row="3"
+                Background="Transparent"
+                BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer2BorderBrush}}"
+                BorderThickness="1" />
+
             <DockPanel
-                LastChildFill="False"
-                Margin="5">
+                Margin="0,10"
+                Grid.Row="4"
+                LastChildFill="False">
                 <TextBlock
-                    FontSize="16"
+                    Text="DPI:"
                     VerticalAlignment="Center"
-                    Text="Etiqueta 1:" />
+                    FontWeight="DemiBold"
+                    FontSize="14" />
                 <ComboBox
-                    x:Name="firstLabel"
-                    DisplayMemberPath="Name"
-                    SelectedIndex="0"
-                    FontSize="16"
-                    Margin="14,0" />
+                    Margin="5,0"
+                    x:Name="dpiList"
+                    DisplayMemberPath="Display"
+                    SelectedValuePath="Value"
+                    SelectedIndex="2"
+                    FontSize="13" />
+                <ComboBox
+                    Margin="5,0"
+                    x:Name="sizeList"
+                    DockPanel.Dock="Right"
+                    DisplayMemberPath="Display"
+                    SelectedValuePath="Value"
+                    FontSize="13" />
+                <TextBlock
+                    Text="Size:"
+                    DockPanel.Dock="Right"
+                    VerticalAlignment="Center"
+                    FontWeight="DemiBold"
+                    FontSize="14" />
             </DockPanel>
+
+            <Border
+                Grid.Row="5"
+                Background="Transparent"
+                BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer2BorderBrush}}"
+                BorderThickness="1" />
+
             <DockPanel
-                Width="Auto"
-                LastChildFill="False"
-                Margin="5">
-                <TextBlock
+                Grid.Row="6"
+                LastChildFill="False">
+                <Button
+                    IsCancel="True"
+                    Margin="5"
                     FontSize="16"
-                    VerticalAlignment="Center"
-                    Text="Versión:" />
-                <ComboBox
+                    Content="Cancelar"
+                    DockPanel.Dock="Right" />
+                <Button
+                    x:Name="acceptButton"
+                    Click="AcceptDialog"
+                    Margin="5"
                     FontSize="16"
-                    Margin="32,0" />
+                    Content="Aceptar"
+                    DockPanel.Dock="Right" />
             </DockPanel>
-        </StackPanel>
-
-        <Border
-            Grid.Row="3"
-            Background="Black" />
-
-        <StackPanel
-            Margin="15,0"
-            VerticalAlignment="Center"
-            Grid.Row="4">
-            <DockPanel
-                LastChildFill="False"
-                Margin="5">
-                <TextBlock
-                    FontSize="16"
-                    VerticalAlignment="Center"
-                    Text="Etiqueta 2:" />
-                <ComboBox
-                    x:Name="secondLabel"
-                    DisplayMemberPath="Name"
-                    SelectedIndex="1"
-                    FontSize="16"
-                    Margin="14,0" />
-            </DockPanel>
-            <DockPanel
-                LastChildFill="False"
-                Margin="5">
-                <TextBlock
-                    FontSize="16"
-                    VerticalAlignment="Center"
-                    Text="Versión:" />
-                <ComboBox
-                    FontSize="16"
-                    Margin="32,0" />
-            </DockPanel>
-        </StackPanel>
-
-        <Border
-            Grid.Row="5"
-            Background="Black" />
-
-        <DockPanel
-            Grid.Row="6"
-            LastChildFill="False">
-            <Button
-                IsCancel="True"
-                Margin="5"
-                FontSize="16"
-                Content="Cancelar"
-                DockPanel.Dock="Right" />
-            <Button
-                Click="Button_Click"
-                Margin="5"
-                FontSize="16"
-                Content="Aceptar"
-                DockPanel.Dock="Right" />
-        </DockPanel>
-    </Grid>
+        </Grid>
+    </GroupBox>
 </adonisControls:AdonisWindow>
