--- a/Core/View/AboutPopUp.xaml
+++ b/Core/View/AboutPopUp.xaml
@@ -1,12 +1,55 @@
-﻿<Window x:Class="Core.View.AboutPopUp"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Core.View"
-        mc:Ignorable="d"
-        Title="AboutPopUp" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+﻿<Window
+    x:Class="Core.View.AboutPopUp"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d"
+    Title="Acerca de Visual Ternera"
+    Height="200"
+    Width="400">
+    <GroupBox>
+        <Grid
+            Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition
+                    Height="Auto" />
+                <RowDefinition
+                    Height="Auto" />
+                <RowDefinition
+                    Height="Auto" />
+                <RowDefinition
+                    Height="*" />
+            </Grid.RowDefinitions>
+
+            <TextBlock
+                Text="Visual Ternera"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontWeight="DemiBold"
+                FontSize="26" />
+
+            <TextBlock
+                x:Name="verionText"
+                Grid.Row="1"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontWeight="Regular"
+                FontSize="14" />
+
+            <TextBlock
+                Grid.Row="2"
+                Text="Agustin Marco - &lt;agustin.marco@runfo.com.ar>"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontWeight="Regular"
+                FontSize="12" />
+
+            <Button
+                Grid.Row="3"
+                Click="Button_Click"
+                VerticalAlignment="Bottom"
+                Content="Okay" />
+        </Grid>
+    </GroupBox>
 </Window>
