--- a/Core/View/SettingsWindow.xaml
+++ b/Core/View/SettingsWindow.xaml
@@ -1,12 +1,19 @@
-﻿<Window x:Class="Core.View.SettingsWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Core.View"
-        mc:Ignorable="d"
-        Title="SettingsWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+﻿<Window
+    x:Class="Core.View.SettingsWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d"
+    Title="Ajustes"
+    Height="200"
+    Width="400">
+    <GroupBox>
+        <TextBlock
+            Text="Work in progress"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            FontWeight="DemiBold"
+            FontSize="26" />
+    </GroupBox>
 </Window>
