--- a/Comparator/View/Comparator.xaml
+++ b/Comparator/View/Comparator.xaml
@@ -1,4 +1,4 @@
-<UserControl
+﻿<UserControl
     x:Class="Comparator.Comparator"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -27,11 +27,20 @@
                     Width="Auto" />
                 <ColumnDefinition
                     Width="*" />
+                <ColumnDefinition
+                    Width="Auto" />
             </Grid.ColumnDefinitions>
 
             <Button
                 Command="{Binding ChangeComparation}"
-                Content="+" />
+                Content="+"
+                FontSize="14"
+                FontWeight="Bold">
+                <Button.ToolTip>
+                    <TextBlock
+                        Text="Cambiar comparacion" />
+                </Button.ToolTip>
+            </Button>
 
             <StackPanel
                 Grid.Column="1"
@@ -80,6 +89,18 @@
                     </Button.Style>
                 </Button>
             </StackPanel>
+
+            <Button
+                Grid.Column="2"
+                Command="{Binding RefreshComparation}"
+                Content="⟳"
+                FontSize="14"
+                FontWeight="Bold">
+                <Button.ToolTip>
+                    <TextBlock
+                        Text="Refrescar comparacion" />
+                </Button.ToolTip>
+            </Button>
         </Grid>
 
         <Grid
