--- a/Core/Manual/style.css
+++ b/Core/Manual/style.css
@@ -115,3 +115,19 @@ iframe {
             cursor: pointer;
             width: 100%;
         }
+
+.img-center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.img-description {
+    text-align: center;
+    padding: 10px 20px;
+    font-weight: lighter;
+}
